Updating styling to fix cases where graphs options overlap the graphs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -836,7 +836,11 @@ td {
 }
 
 .graph-menu {
-    width: 190px;
+    width: 200px;
+}
+
+.type-menu {
+    width: 210px;
 }
 
 .options-list {
@@ -855,6 +859,7 @@ td {
 
 .metrics-dimensions-block {
     display: block;
+    min-height: 330px;
 }
 
 .dimensions-filters-menu {
@@ -1030,7 +1035,6 @@ td {
 
 .plot-area {
     background-color: #f5f5f5;
-    margin-top: 35px;
     margin-bottom: 75px;
     border-radius: 4px;
 }
@@ -1038,6 +1042,8 @@ td {
 .chosen-container-multi .chosen-choices {
     border-radius: 4px !important;
     overflow-x: scroll !important;
+    max-height: 100px !important;
+    overflow-y: scroll !important;
 }
 
 .chosen-container-multi {
@@ -1046,4 +1052,5 @@ td {
 
 .choosing-area {
     min-height: 390px;
+    margin-bottom: 15px;
 }
